--- a/scripts/Tools/Makefile
+++ b/scripts/Tools/Makefile
@@ -559,6 +559,7 @@ endif
 
 # Set FTorch info if it is being used
 ifeq ($(strip $(USE_FTORCH)), True)
+  CPPDEFS += -DUSE_FTORCH
   FTORCH_LOC := /glade/u/home/jatkinson/FTorch/bin/oneapi_2023.2.1_torch_2.1
   INCLDIR += -I$(FTORCH_LOC)/include/ftorch
   SLIBS += -L$(FTORCH_LOC)/lib64 -lftorch
